...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                />

            <Button
                android:id="@+id/nextButton"
                style="?gd_primaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gd_default_button_height"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/gd_default_margin_horizontal"
                android:layout_marginTop="@dimen/gd_default_margin"
...
